# css-quant

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  Dockerfile.prod  README.md  alembic.ini  docker-entrypoint.prod.sh  pyproject.toml
apps/api/alembic/: README  env.py
apps/api/alembic/versions/: fd873a83aa76_create_users_table.py  fe4de3edb1d3_initial_wiring.py
apps/api/src/: config.py  errors.py  main.py
apps/api/src/adapters/: db.py  llm.py  user_repository.py
apps/api/src/api/: deps.py
apps/api/src/api/v1/: auth.py  health.py
apps/api/src/domain/: base.py  ids.py  security.py  user.py
apps/api/src/services/: auth.py
apps/api/src/workers/: settings.py
apps/api/tests/: conftest.py  test_auth_bootstrap.py  test_config.py  test_health.py  test_ids.py  test_llm_adapter.py  test_security.py  test_worker_settings.py
apps/web/: README.md
docs/: SoT.md
docs/adr/: 0001-uuid-v7-pk.md  0002-arq-not-celery.md  0003-pydantic-v2-schema.md  0004-fake-by-default-adapters.md  0005-psycopg3-not-asyncpg.md  0006-local-selfhosting-mac-mini.md  0007-two-regime-start.md  0008-no-ml-price-prediction.md  0009-info-monitoring-mvp.md  0010-static-glossary-no-llm-generation.md  0011-etf-excluded-from-ai-score.md  README.md
infra/: README.md  docker-compose.dev.yml  docker-compose.prod.yml
